--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <td width=18% align=left>
 <marquee bgcolor=red> Siepka </marquee>
 <p> Linki do zadań </p>
-
+<a href="zadanie14.html" target="strony"> 1) zadanie 14</a>
+<br>
   
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -18,9 +19,6 @@
 <td width=18% align=left>
 <a href="start.html" target="strony">Start</a>
 <p> Linki do kodów zadań</p>
-
-
-    <br>
   
   
 </td>
