--- a/zadanie14.html
+++ b/zadanie14.html
@@ -4,23 +4,21 @@
 <meta charset="utf-8">
 <title>Canvas</title>
 <script type="text/javascript">
-    function rysuj()
-    {
-        var rysowanie = document.getElementById('obrazek');
-        var rodzaj = rysowanie.getContext('2d');
-        rodzaj.fillStyle = 'yellow';
-        rodzaj.fillrect(0,0,100,100);
-        rodzaj.strokeRect(0,0,100,100);
-        rodzja.fillstyle = 'red';
-        rodzaj.fillrect(30,30,30,30);
-    }
-
-    </script>
+function rysuj() {
+var rysowanie = document.getElementById('obrazek');
+var rodzaj = rysowanie.getContext('2d');
+rodzaj.fillStyle = 'yellow';
+rodzaj.fillRect(0, 0, 100, 100);
+rodzaj.strokeRect(0, 0, 100, 100);
+rodzaj.fillStyle = 'red';
+rodzaj.fillRect(30, 30, 30, 30);
+}
+</script>
 </head>
 <body onload="rysuj();">
-<canvas id="obrazek" width="300" height="300">>
-    Twoja przeglądarka nie wspiera Canvas!
-    Zainstaluj Internet Explorer 9.x
+<canvas id="obrazek" width="300" height="300">
+Twoja przeglądarka nie wspiera Canvas!
+Zainstaluj Internet Explorer 9.x
 </canvas>
 </body>
 </html>
